--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
         <item>Cowell/Stevenson</item>
         <item>Crown/Merrill</item>
         <item>Porter/Kresge</item>
-        <item>Eight/Oakes</item>
+        <item>Rachel Carson/Oakes</item>
         <item>Nine/Ten</item>
     </string-array>
     <string-array name="colleges_values">
