--- a/app/src/main/res/layout/favorites_list.xml
+++ b/app/src/main/res/layout/favorites_list.xml
@@ -2,19 +2,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/tools">
     <ListView android:id="@+id/favorites_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/listBackground"/>
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/favorites_fab"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
         android:src="@drawable/ic_add"
-        fab:fab_colorNormal="?attr/fabMain"
-        fab:fab_colorPressed="?attr/fabPressed"
-        fab:fab_colorRipple="?attr/fabRipple" />
+        android:layout_gravity="bottom|right"
+        app:fabSize="normal"
+        app:elevation="6dp"
+        android:layout_margin="24dp"
+        />
 </FrameLayout>
