--- a/app/src/main/res/layout/meal.xml
+++ b/app/src/main/res/layout/meal.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/tools">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/meal_refresh_layout"
         android:layout_width="match_parent"
@@ -12,14 +13,14 @@
             android:layout_height="match_parent"
             android:background="?attr/listBackground"/>
     </android.support.v4.widget.SwipeRefreshLayout>
-    <com.melnykov.fab.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
         android:src="@drawable/ic_action_go_to_today"
-        fab:fab_colorNormal="?attr/fabMain"
-        fab:fab_colorPressed="?attr/fabPressed"
-        fab:fab_colorRipple="?attr/fabRipple" />
+        android:layout_gravity="bottom|right"
+        app:fabSize="normal"
+        app:elevation="6dp"
+        android:layout_margin="24dp"
+        />
 </FrameLayout>
