--- a/app/src/main/res/layout/pager_fragment.xml
+++ b/app/src/main/res/layout/pager_fragment.xml
@@ -8,7 +8,7 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/tabBackground"/>
+        android:background="?attr/tabBG"/>
 
     <android.support.v4.view.ViewPager
           android:id="@+id/viewpager"
