--- a/app/src/main/res/layout-large/meal_fragment.xml
+++ b/app/src/main/res/layout-large/meal_fragment.xml
@@ -56,6 +56,19 @@
                     android:paddingBottom="16dp"
                     android:paddingTop="16dp"
                     android:background="?attr/tabBG"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/large_latenight_label"
+                    android:text="@string/latenight"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:paddingBottom="16dp"
+                    android:paddingTop="16dp"
+                    android:background="?attr/tabBG"/>
             </LinearLayout>
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -81,6 +94,15 @@
                     android:background="?attr/dividerColor"
                     android:orientation="vertical" />
                 <ListView android:id="@+id/dinner_list"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"/>
+                <LinearLayout
+                    android:layout_width="1dip"
+                    android:layout_height="fill_parent"
+                    android:background="?attr/dividerColor"
+                    android:orientation="vertical" />
+                <ListView android:id="@+id/latenight_list"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"/>
