--- a/app/src/main/res/layout/nutrition_layout.xml
+++ b/app/src/main/res/layout/nutrition_layout.xml
@@ -62,33 +62,21 @@
                 android:id="@+id/nutrition_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
             <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/nutrition_servingsize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:textColor="#000000"/>
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="16dip"
                 android:background="#000000"
                 android:orientation="horizontal"/>
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/nutrition_amountperserving"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="2dip"
-                android:background="#000000"
-                android:orientation="horizontal"
-                android:gravity="center_horizontal"/>
             <!--TextView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/nutrition_calories"
                 android:layout_width="wrap_content"
@@ -98,26 +86,52 @@
                 android:textColor="#000000"/-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/nutrition_calories"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#000000"/>
+                    android:orientation="vertical">
+                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:id="@+id/nutrition_amountperserving"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:textColor="#000000"/>
+                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:id="@+id/nutrition_calories_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:textColor="#000000"/>
+                    <!--TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:id="@+id/nutrition_calories_fat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:textSize="16sp"
+                        android:textColor="#000000"/-->
+                </LinearLayout>
                 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/nutrition_calories_fat"
+                    android:id="@+id/nutrition_calories"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="42sp"
+                    android:textStyle="bold"
                     android:gravity="right"
-                    android:textSize="16sp"
                     android:textColor="#000000"/>
             </LinearLayout>
-            <LinearLayout
+            <!--LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="6dip"
+                android:background="#000000"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"/-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="5dip"
                 android:background="#000000"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"/>
@@ -419,7 +433,7 @@
                     android:textSize="16sp"
                     android:textColor="#000000"/>
             </RelativeLayout>
-            <LinearLayout
+            <!--LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="2dip"
                 android:background="#000000"
@@ -445,7 +459,7 @@
                     android:layout_alignParentRight="true"
                     android:textSize="16sp"
                     android:textColor="#000000"/>
-            </RelativeLayout>
+            </RelativeLayout-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="2dip"
